# PhotorealisticRendering

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: Application.h.434132118BFCA9EC.idx  EntryPoint.h.2A7404A338ABBB8F.idx  Image.h.CB407BBDE81D958C.idx  Input.h.BBC6287014B8B36A.idx  KeyCodes.h.85AE52B6AFB74D40.idx  Layer.h.752B4D56DD8B3BCB.idx  _fixes.hpp.FF2A955C249A62FE.idx  _vectorize.hpp.4319364CF68CDD0E.idx  common.hpp.B7E3302631833AD3.idx  compute_common.hpp.D132EC40FBFFB1F8.idx  compute_vector_relational.hpp.184D213D1F964F9C.idx  exponential.hpp.F8B2D6CB9F24C51A.idx  func_common.inl.0B89B3AC095D24F0.idx  func_exponential.inl.DF336184C73598E9.idx  func_geometric.inl.1D84984DA651C692.idx  func_integer.inl.E8DA3EAC17DA4B92.idx  func_matrix.inl.DAB1AA1EE57E69E2.idx  func_packing.inl.AF22C10D103F749B.idx  func_trigonometric.inl.7BFFDC63CC4A2694.idx  func_vector_relational.inl.276F575E2A881476.idx  fwd.hpp.D6CABA754FCE3016.idx  geometric.hpp.DCC7319A5028ACB0.idx  glm.hpp.7327FAF5AF2370C4.idx  imconfig.h.173F2E1AEFAE4845.idx  imgui.h.62294ED6533ACAED.idx  integer.hpp.5CE9CD0C45CDD4FA.idx  main.cpp.539F29557E3D0332.idx  mat2x2.hpp.45CA1D57DDA785DE.idx  mat2x3.hpp.53E4BF14A3E54616.idx  mat2x4.hpp.5EE62FA34FA32A4F.idx  (+112 more)
.github/workflows/: main.yml
src/: main.cpp
src/accelerators/: bvh.cpp  bvh.h
src/core/: AllocAligned.cpp  AllocAligned.h  Efloat.cpp  Efloat.h  geometry.h  interaction.cpp  interaction.h  phr.h  primitive.cpp  primitive.h  shape.h  transform.cpp  transform.h
src/shapes/: sphere.cpp  sphere.h
(+5 files in other folders)
